worked in pandas

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1,1 +1,344 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyMaOldVQHE1y4Pq7FsbOs5b"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":10,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"2riULQ0YNp3K","executionInfo":{"status":"ok","timestamp":1753374132188,"user_tz":-330,"elapsed":50,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"4152e8c0-b41b-4efe-e92c-60b5184695ca"},"outputs":[{"output_type":"stream","name":"stdout","text":["1    34\n","2    45\n","3    67\n","4    89\n","dtype: int64\n","0    5\n","1    6\n","2    3\n","3    2\n","dtype: int64\n","rajesh     21\n","vignesh    22\n","charan     23\n","dtype: int64\n"]}],"source":["import pandas as pd\n","import numpy as np\n","#series\n","series1=pd.Series([34,45,67,89],index=(1,2,3,4))\n","print(series1)\n","array1=np.array([5,6,3,2])\n","series2=pd.Series(array1)\n","print(series2)\n","dict1={'rajesh':21,'vignesh':22,'charan':23}\n","series3=pd.Series(dict1)\n","print(series3)"]},{"cell_type":"code","source":["import pandas as pd\n","s1=pd.Series([20,30,40,50],index=[\"ind\",\"us\",\"uk\",\"aus\"])\n","#print(s1)\n","print(s1[2])\n","print(s1[\"us\"])\n","print(s1[[\"ind\",\"aus\"]])\n","print()\n","print(s1[1:3])\n","print(s1[\"ind\":\"uk\"])\n","print(s1[:3])\n","print(s1[0:])\n","print()"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"Vq1ifFi-PkPS","executionInfo":{"status":"ok","timestamp":1753374823879,"user_tz":-330,"elapsed":55,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"f9ca5b11-fde4-427b-8e92-b2d78d517e3b"},"execution_count":17,"outputs":[{"output_type":"stream","name":"stdout","text":["40\n","30\n","ind    20\n","aus    50\n","dtype: int64\n","\n","us    30\n","uk    40\n","dtype: int64\n","ind    20\n","us     30\n","uk     40\n","dtype: int64\n","ind    20\n","us     30\n","uk     40\n","dtype: int64\n","ind    20\n","us     30\n","uk     40\n","aus    50\n","dtype: int64\n","\n"]},{"output_type":"stream","name":"stderr","text":["/tmp/ipython-input-17-3845405440.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n","  print(s1[2])\n"]}]},{"cell_type":"code","source":["import pandas as pd\n","import numpy as np\n","s1=pd.Series(np.arange(10,17,1))\n","print(s1)\n","print(\"head :\",s1.head(3))\n","print(\"tail :\",s1.tail(2))\n","print(\"count :\",s1.count())"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"pcrUBIWaSub0","executionInfo":{"status":"ok","timestamp":1753375139300,"user_tz":-330,"elapsed":14,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"daaf86b9-0bc0-4c2b-d0db-5f9ccfdd408a"},"execution_count":21,"outputs":[{"output_type":"stream","name":"stdout","text":["0    10\n","1    11\n","2    12\n","3    13\n","4    14\n","5    15\n","6    16\n","dtype: int64\n","head : 0    10\n","1    11\n","2    12\n","dtype: int64\n","tail : 5    15\n","6    16\n","dtype: int64\n","count : 7\n"]}]},{"cell_type":"code","source":["import pandas as pd\n","import numpy as np\n","s1=pd.Series(np.arange(10,17,1))\n","s1.index.name=\"values\"\n","s1.name=\"numbers\"\n","print(s1.count())\n","s2=pd.Series(np.arange(1,6,1))\n","s3=s1+s2\n","print(s1)\n","print(s2)\n","print(s3)\n","print(s1.add(s2,fill_value=0))"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"ZPvc-Cw0T3OX","executionInfo":{"status":"ok","timestamp":1753376327432,"user_tz":-330,"elapsed":50,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"1afadde0-e5f7-46b2-d8d4-121cc6c7c290"},"execution_count":29,"outputs":[{"output_type":"stream","name":"stdout","text":["7\n","values\n","0    10\n","1    11\n","2    12\n","3    13\n","4    14\n","5    15\n","6    16\n","Name: numbers, dtype: int64\n","0    1\n","1    2\n","2    3\n","3    4\n","4    5\n","dtype: int64\n","0    11.0\n","1    13.0\n","2    15.0\n","3    17.0\n","4    19.0\n","5     NaN\n","6     NaN\n","dtype: float64\n","0    11.0\n","1    13.0\n","2    15.0\n","3    17.0\n","4    19.0\n","5    15.0\n","6    16.0\n","dtype: float64\n"]}]},{"cell_type":"markdown","source":["DataFrames"],"metadata":{"id":"5sEFnWUVYFJG"}},{"cell_type":"code","source":["import pandas as pd\n","import numpy as np\n","print(\"creating the dataFrame using array\")\n","a1=np.array([10,20,30,40])\n","a2=np.array([50,60,70,80])\n","a3=np.array([10,20,30,40])\n","d1=pd.DataFrame([a1,a2,a3],columns=['a','b','c','d'])\n","print(d1)\n","print(\"creating the dataFrame using series\")\n","s1=pd.Series([10,20,30,40],index=['vignesh','rajesh','ram','charan'])\n","s2=pd.Series([50,60,70,80],index=['vignesh','rajesh','ram','charan'])\n","s3=pd.Series([10,20,30,40],index=['vignesh','rajesh','ram','charan'])\n","d2=pd.DataFrame([s1,s2,s3])\n","print(d2)\n"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"tIZ5P7caX5HP","executionInfo":{"status":"ok","timestamp":1753377678609,"user_tz":-330,"elapsed":47,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"07de0aa4-8198-40ea-c4a0-709fbf0003d8"},"execution_count":45,"outputs":[{"output_type":"stream","name":"stdout","text":["creating the dataFrame using array\n","    a   b   c   d\n","0  10  20  30  40\n","1  50  60  70  80\n","2  10  20  30  40\n","creating the dataFrame using series\n","   vignesh  rajesh  ram  charan\n","0       10      20   30      40\n","1       50      60   70      80\n","2       10      20   30      40\n"]}]},{"cell_type":"code","source":["import pandas as pd\n","d1=pd.DataFrame({\"vignesh\": [10,20,30],\"ram\":[20,30,40],\"charan\":[120,34,55]})\n","print(d1)\n","print(d1.tail(2))\n","print(d1.iloc[1:,:2])\n","d1.loc[4]=[40,50,60]\n","print(d1)\n","print(d1.vignesh.sum())\n","print(d1.vignesh.sort_values())"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"O9TTDmmcdDfj","executionInfo":{"status":"ok","timestamp":1753381592266,"user_tz":-330,"elapsed":24,"user":{"displayName":"Male Vigneshwar Reddy","userId":"12719123823434032624"}},"outputId":"13b08e60-6712-4ebc-d0aa-f369cc2b5e78"},"execution_count":66,"outputs":[{"output_type":"stream","name":"stdout","text":["   vignesh  ram  charan\n","0       10   20     120\n","1       20   30      34\n","2       30   40      55\n","   vignesh  ram  charan\n","1       20   30      34\n","2       30   40      55\n","   vignesh  ram\n","1       20   30\n","2       30   40\n","   vignesh  ram  charan\n","0       10   20     120\n","1       20   30      34\n","2       30   40      55\n","4       40   50      60\n","100\n","0    10\n","1    20\n","2    30\n","4    40\n","Name: vignesh, dtype: int64\n"]}]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOJyuV+QnnPi0ly/7pkMCmy",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vigneshwar315/machinelearning/blob/main/pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2riULQ0YNp3K",
+        "outputId": "4152e8c0-b41b-4efe-e92c-60b5184695ca"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1    34\n",
+            "2    45\n",
+            "3    67\n",
+            "4    89\n",
+            "dtype: int64\n",
+            "0    5\n",
+            "1    6\n",
+            "2    3\n",
+            "3    2\n",
+            "dtype: int64\n",
+            "rajesh     21\n",
+            "vignesh    22\n",
+            "charan     23\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "#series\n",
+        "series1=pd.Series([34,45,67,89],index=(1,2,3,4))\n",
+        "print(series1)\n",
+        "array1=np.array([5,6,3,2])\n",
+        "series2=pd.Series(array1)\n",
+        "print(series2)\n",
+        "dict1={'rajesh':21,'vignesh':22,'charan':23}\n",
+        "series3=pd.Series(dict1)\n",
+        "print(series3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "s1=pd.Series([20,30,40,50],index=[\"ind\",\"us\",\"uk\",\"aus\"])\n",
+        "print(s1[2])\n",
+        "print(s1[\"us\"])\n",
+        "print(s1[[\"ind\",\"aus\"]])\n",
+        "print()\n",
+        "print(s1[1:3])\n",
+        "print(s1[\"ind\":\"uk\"])\n",
+        "#print(s1[:3])\n",
+        "#print(s1[0:])\n",
+        "print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vq1ifFi-PkPS",
+        "outputId": "cdb5402a-9b3e-4384-812e-8b73545db1c7"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n",
+            "30\n",
+            "ind    20\n",
+            "aus    50\n",
+            "dtype: int64\n",
+            "\n",
+            "us    30\n",
+            "uk    40\n",
+            "dtype: int64\n",
+            "ind    20\n",
+            "us     30\n",
+            "uk     40\n",
+            "dtype: int64\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1-2353914785.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+            "  print(s1[2])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "s1=pd.Series(np.arange(10,17,1))\n",
+        "print(s1)\n",
+        "print(\"head :\",s1.head(3))\n",
+        "print(\"tail :\",s1.tail(2))\n",
+        "print(\"count :\",s1.count())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pcrUBIWaSub0",
+        "outputId": "daaf86b9-0bc0-4c2b-d0db-5f9ccfdd408a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    10\n",
+            "1    11\n",
+            "2    12\n",
+            "3    13\n",
+            "4    14\n",
+            "5    15\n",
+            "6    16\n",
+            "dtype: int64\n",
+            "head : 0    10\n",
+            "1    11\n",
+            "2    12\n",
+            "dtype: int64\n",
+            "tail : 5    15\n",
+            "6    16\n",
+            "dtype: int64\n",
+            "count : 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "s1=pd.Series(np.arange(10,17,1))\n",
+        "s1.index.name=\"values\"\n",
+        "s1.name=\"numbers\"\n",
+        "print(s1.count())\n",
+        "s2=pd.Series(np.arange(1,6,1))\n",
+        "s3=s1+s2\n",
+        "print(s1)\n",
+        "print(s2)\n",
+        "print(s3)\n",
+        "print(s1.add(s2,fill_value=0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZPvc-Cw0T3OX",
+        "outputId": "1afadde0-e5f7-46b2-d8d4-121cc6c7c290"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "values\n",
+            "0    10\n",
+            "1    11\n",
+            "2    12\n",
+            "3    13\n",
+            "4    14\n",
+            "5    15\n",
+            "6    16\n",
+            "Name: numbers, dtype: int64\n",
+            "0    1\n",
+            "1    2\n",
+            "2    3\n",
+            "3    4\n",
+            "4    5\n",
+            "dtype: int64\n",
+            "0    11.0\n",
+            "1    13.0\n",
+            "2    15.0\n",
+            "3    17.0\n",
+            "4    19.0\n",
+            "5     NaN\n",
+            "6     NaN\n",
+            "dtype: float64\n",
+            "0    11.0\n",
+            "1    13.0\n",
+            "2    15.0\n",
+            "3    17.0\n",
+            "4    19.0\n",
+            "5    15.0\n",
+            "6    16.0\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DataFrames"
+      ],
+      "metadata": {
+        "id": "5sEFnWUVYFJG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "print(\"creating the dataFrame using array\")\n",
+        "a1=np.array([10,20,30,40])\n",
+        "a2=np.array([50,60,70,80])\n",
+        "a3=np.array([10,20,30,40])\n",
+        "d1=pd.DataFrame([a1,a2,a3],columns=['a','b','c','d'])\n",
+        "print(d1)\n",
+        "print(\"creating the dataFrame using series\")\n",
+        "s1=pd.Series([10,20,30,40],index=['vignesh','rajesh','ram','charan'])\n",
+        "s2=pd.Series([50,60,70,80],index=['vignesh','rajesh','ram','charan'])\n",
+        "s3=pd.Series([10,20,30,40],index=['vignesh','rajesh','ram','charan'])\n",
+        "d2=pd.DataFrame([s1,s2,s3])\n",
+        "print(d2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tIZ5P7caX5HP",
+        "outputId": "07de0aa4-8198-40ea-c4a0-709fbf0003d8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "creating the dataFrame using array\n",
+            "    a   b   c   d\n",
+            "0  10  20  30  40\n",
+            "1  50  60  70  80\n",
+            "2  10  20  30  40\n",
+            "creating the dataFrame using series\n",
+            "   vignesh  rajesh  ram  charan\n",
+            "0       10      20   30      40\n",
+            "1       50      60   70      80\n",
+            "2       10      20   30      40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "d1=pd.DataFrame({\"vignesh\": [10,20,30],\"ram\":[20,30,40],\"charan\":[120,34,55]})\n",
+        "print(d1)\n",
+        "print(d1.tail(2))\n",
+        "print(d1.iloc[1:,:2])\n",
+        "d1.loc[4]=[40,50,60]\n",
+        "print(d1)\n",
+        "print(d1.vignesh.sum())\n",
+        "print(d1.vignesh.sort_values())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O9TTDmmcdDfj",
+        "outputId": "13b08e60-6712-4ebc-d0aa-f369cc2b5e78"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   vignesh  ram  charan\n",
+            "0       10   20     120\n",
+            "1       20   30      34\n",
+            "2       30   40      55\n",
+            "   vignesh  ram  charan\n",
+            "1       20   30      34\n",
+            "2       30   40      55\n",
+            "   vignesh  ram\n",
+            "1       20   30\n",
+            "2       30   40\n",
+            "   vignesh  ram  charan\n",
+            "0       10   20     120\n",
+            "1       20   30      34\n",
+            "2       30   40      55\n",
+            "4       40   50      60\n",
+            "100\n",
+            "0    10\n",
+            "1    20\n",
+            "2    30\n",
+            "4    40\n",
+            "Name: vignesh, dtype: int64\n"
+          ]
+        }
+      ]
+    }
+  ]
+}
