worked on DataFrame methods and reading the csv files

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJyuV+QnnPi0ly/7pkMCmy",
+      "authorship_tag": "ABX9TyOO0rJn/FAbYIY6a0sd9rQl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "id": "Vq1ifFi-PkPS",
         "outputId": "cdb5402a-9b3e-4384-812e-8b73545db1c7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,6 +336,76 @@
             "2    30\n",
             "4    40\n",
             "Name: vignesh, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "d1=pd.read_csv('/content/sample_data/anscombe.json')\n",
+        "print(d1.to_string())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2CGNG74KRN0N",
+        "outputId": "fddbca7e-085e-43da-f88a-3e7d2d771298"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                        [\n",
+            "  {\"Series\":\"I\"   \"X\":10.0 \"Y\":8.04}  NaN\n",
+            "                  \"X\":8.0  \"Y\":6.95}  NaN\n",
+            "                  \"X\":13.0 \"Y\":7.58}  NaN\n",
+            "                  \"X\":9.0  \"Y\":8.81}  NaN\n",
+            "                  \"X\":11.0 \"Y\":8.33}  NaN\n",
+            "                  \"X\":14.0 \"Y\":9.96}  NaN\n",
+            "                  \"X\":6.0  \"Y\":7.24}  NaN\n",
+            "                  \"X\":4.0  \"Y\":4.26}  NaN\n",
+            "                  \"X\":12.0 \"Y\":10.84} NaN\n",
+            "                  \"X\":7.0  \"Y\":4.81}  NaN\n",
+            "                  \"X\":5.0  \"Y\":5.68}  NaN\n",
+            "  {\"Series\":\"II\"  \"X\":10.0 \"Y\":9.14}  NaN\n",
+            "                  \"X\":8.0  \"Y\":8.14}  NaN\n",
+            "                  \"X\":13.0 \"Y\":8.74}  NaN\n",
+            "                  \"X\":9.0  \"Y\":8.77}  NaN\n",
+            "                  \"X\":11.0 \"Y\":9.26}  NaN\n",
+            "                  \"X\":14.0 \"Y\":8.10}  NaN\n",
+            "                  \"X\":6.0  \"Y\":6.13}  NaN\n",
+            "                  \"X\":4.0  \"Y\":3.10}  NaN\n",
+            "                  \"X\":12.0 \"Y\":9.13}  NaN\n",
+            "                  \"X\":7.0  \"Y\":7.26}  NaN\n",
+            "                  \"X\":5.0  \"Y\":4.74}  NaN\n",
+            "  {\"Series\":\"III\" \"X\":10.0 \"Y\":7.46}  NaN\n",
+            "                  \"X\":8.0  \"Y\":6.77}  NaN\n",
+            "                  \"X\":13.0 \"Y\":12.74} NaN\n",
+            "                  \"X\":9.0  \"Y\":7.11}  NaN\n",
+            "                  \"X\":11.0 \"Y\":7.81}  NaN\n",
+            "                  \"X\":14.0 \"Y\":8.84}  NaN\n",
+            "                  \"X\":6.0  \"Y\":6.08}  NaN\n",
+            "                  \"X\":4.0  \"Y\":5.39}  NaN\n",
+            "                  \"X\":12.0 \"Y\":8.15}  NaN\n",
+            "                  \"X\":7.0  \"Y\":6.42}  NaN\n",
+            "                  \"X\":5.0  \"Y\":5.73}  NaN\n",
+            "  {\"Series\":\"IV\"  \"X\":8.0  \"Y\":6.58}  NaN\n",
+            "                           \"Y\":5.76}  NaN\n",
+            "                           \"Y\":7.71}  NaN\n",
+            "                           \"Y\":8.84}  NaN\n",
+            "                           \"Y\":8.47}  NaN\n",
+            "                           \"Y\":7.04}  NaN\n",
+            "                           \"Y\":5.25}  NaN\n",
+            "                  \"X\":19.0 \"Y\":12.50} NaN\n",
+            "                  \"X\":8.0  \"Y\":5.56}  NaN\n",
+            "                           \"Y\":7.91}  NaN\n",
+            "                           \"Y\":6.89}  NaN\n",
+            "]                 NaN      NaN        NaN\n"
           ]
         }
       ]
