worked on operations of min,max and its parameters and some methods

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO0rJn/FAbYIY6a0sd9rQl",
+      "authorship_tag": "ABX9TyPpxEKSB/f+OzyzmXzvSlvG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,7 +354,7 @@
         "id": "2CGNG74KRN0N",
         "outputId": "fddbca7e-085e-43da-f88a-3e7d2d771298"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,6 +409,121 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "data = {\n",
+        "    'Subject': ['Math', 'Science', 'English', 'History', 'Computer'],\n",
+        "    'a': [95, 88, 76, 84, 99],\n",
+        "    'b': [94, 90, 86, 81, 96],\n",
+        "    'c': [67, 68, 86, 74, 59],\n",
+        "    'd': [74, 50, 96, 91, 76]\n",
+        "}\n",
+        "df = pd.DataFrame(data)\n",
+        "print(df)\n",
+        "print(\"\\nMaximum value:\")\n",
+        "print(df.max(numeric_only=True))\n",
+        "print(\"\\nMinimum value:\")\n",
+        "print(df.min(numeric_only=True))\n",
+        "print(\"\\nSum of values:\")\n",
+        "print(df.sum(numeric_only=True))\n",
+        "print(\"\\nMean (Average):\")\n",
+        "print(df.mean(numeric_only=True))\n",
+        "print(\"\\nMedian:\")\n",
+        "print(df.median(numeric_only=True))\n",
+        "print(\"\\nStandard Deviation:\")\n",
+        "print(df.std(numeric_only=True))\n",
+        "print(\"\\nDescribe (Summary Statistics):\")\n",
+        "print(df.describe())\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4BPeWPesVJfo",
+        "outputId": "ca841ffe-9cee-4bc9-96a6-1a538cc8e1ed"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Subject   a   b   c   d\n",
+            "0      Math  95  94  67  74\n",
+            "1   Science  88  90  68  50\n",
+            "2   English  76  86  86  96\n",
+            "3   History  84  81  74  91\n",
+            "4  Computer  99  96  59  76\n",
+            "\n",
+            "Maximum value:\n",
+            "a    99\n",
+            "b    96\n",
+            "c    86\n",
+            "d    96\n",
+            "dtype: int64\n",
+            "\n",
+            "Minimum value:\n",
+            "a    76\n",
+            "b    81\n",
+            "c    59\n",
+            "d    50\n",
+            "dtype: int64\n",
+            "\n",
+            "Sum of values:\n",
+            "a    442\n",
+            "b    447\n",
+            "c    354\n",
+            "d    387\n",
+            "dtype: int64\n",
+            "\n",
+            "Mean (Average):\n",
+            "a    88.4\n",
+            "b    89.4\n",
+            "c    70.8\n",
+            "d    77.4\n",
+            "dtype: float64\n",
+            "\n",
+            "Median:\n",
+            "a    88.0\n",
+            "b    90.0\n",
+            "c    68.0\n",
+            "d    76.0\n",
+            "dtype: float64\n",
+            "\n",
+            "Standard Deviation:\n",
+            "a     9.071935\n",
+            "b     6.066300\n",
+            "c    10.034939\n",
+            "d    17.994444\n",
+            "dtype: float64\n",
+            "\n",
+            "Describe (Summary Statistics):\n",
+            "               a        b          c          d\n",
+            "count   5.000000   5.0000   5.000000   5.000000\n",
+            "mean   88.400000  89.4000  70.800000  77.400000\n",
+            "std     9.071935   6.0663  10.034939  17.994444\n",
+            "min    76.000000  81.0000  59.000000  50.000000\n",
+            "25%    84.000000  86.0000  67.000000  74.000000\n",
+            "50%    88.000000  90.0000  68.000000  76.000000\n",
+            "75%    95.000000  94.0000  74.000000  91.000000\n",
+            "max    99.000000  96.0000  86.000000  96.000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8oW7MMv1VHtC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
